add jacoco profile, to collect coverage